data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1426.wast
;; 7. **Test Description**:     Implement a `block` with a `br_if` referencing an invalid label depth in the wizard_engine while within bounds in WASM. Observe the behavior difference to check label bounds in wizard_engine.    - **Constraint Checked**: Out-of-bounds label access prevention.    - **Stack Corruption Check**: Ensures that invalid labels do not manipulate the stack unexpectedly.

(assert_invalid
  (module
    (func $test
      (block
        (br_if 1 (i32.const 1))
      )
    )
  )
  "invalid label"
)